--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:wght@100;300;400&display=swap');
 
 :root {
     --titles-font-family: 'Lato', sans-serif;
+    --text-font-family: 'Roboto', sans-serif;
+    --light-gray: #e0e0e0;
+    --dark-gray: #1a1a1a;
+    --very-dark-gray: #080808;
+    --shadow: 0px 3px 4px rgba(0,0,0,0.15);
     font-size: 16px;
 }
 
@@ -11,6 +16,11 @@
     padding: 0;
     font-size: 1rem;
     outline: none;
+    font-style: normal;
+}
+
+body {
+    transition: background-color 0.3s;
 }
 
 h1 {
@@ -18,7 +28,88 @@ h1 {
     font-size: 1.5rem;
     font-weight: 300;
     text-align: center;
-    margin: 2rem;
+    padding: 1.5rem;
+}
+
+h1#hello {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    background-color: var(--light-gray);
+}
+
+h2 {
+    font-family: var(--titles-font-family);
+    margin-bottom: 0.5rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+em {
+    font-weight: 900;
+}
+
+p {
+    font-family: var(--text-font-family);
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+}
+
+main {
+    background-color: var(--dark-gray);
+    color: white;
+    padding: calc(1.5rem + 76px) 1.5rem 192px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 1.5rem;
+    background-color: var(--dark-gray);
+}
+
+textarea {
+    font-family: var(--text-font-family);
+    display: block;
+    width: 100%;
+    height: 6rem;
+    resize: none;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    background-color: var(--light-gray);
+    box-shadow: var(--shadow);
+}
+
+textarea:focus, textarea:hover, button:focus, button:hover {
+    background-color: white;
+}
+
+button {
+    font-family: var(--titles-font-family);
+    font-weight: 700;
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: var(--light-gray);
+    color: black;
+    box-shadow: var(--shadow);
+    text-transform: uppercase;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 #password-field {
@@ -45,11 +136,44 @@ h1 {
     font-size: 1.5rem;
     border: none;
     border-radius: 0.5rem;
-    box-shadow: 0px 3px 4px rgba(0,0,0,0.15);
+    box-shadow: var(--shadow);
+}
+
+.dark-btn {
+    background-color: var(--very-dark-gray);
+    color: white;
+    font-weight: 400;
+}
+
+.dark-btn:hover, .dark-btn:focus {
+    background-color: black;
+}
+
+@media screen and (min-width: 769px) {
+    main {
+        padding: calc(3rem + 76px) 3rem 240px;
+    }
+
+    footer {
+        padding: 3rem;
+    }
 }
 
 @media screen and (min-width: 1025px) {
     :root {
-        font-size: 20px;
+        font-size: 18px;
+    }
+
+    main {
+        padding: calc(3rem + 86px) 3rem 270px;
+    }
+
+    form, main button, .message-container {
+        max-width: 1008px;
+        margin: auto;
+    }
+
+    footer {
+        padding: 3rem;
     }
 }
