--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     font-size: 1rem;
     outline: none;
     font-style: normal;
+    list-style-type: none;
 }
 
 body {
@@ -56,6 +57,7 @@ p {
     font-family: var(--text-font-family);
     font-size: 0.9rem;
     line-height: 1.3rem;
+    white-space: pre-line;
 }
 
 main {
@@ -64,7 +66,16 @@ main {
     padding: calc(1.5rem + 76px) 1.5rem 192px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     row-gap: 2rem;
+    min-height: 100vh;
+}
+
+#message-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    width: 100%;
 }
 
 footer {
@@ -168,9 +179,13 @@ button:hover {
         padding: calc(3rem + 86px) 3rem 270px;
     }
 
-    form, main button, .message-container {
+    form, main button {
         max-width: 1008px;
         margin: auto;
+    }
+
+    #message-list {
+        max-width: 1008px;
     }
 
     footer {
